[package]
name = "onchain_verified_nft_collection"
version = "0.1.0"
description = "A program demonstrating best practices for on-chain verified NFT collections"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onchain_verified_nft_collection"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
mpl-token-metadata = { version = "5.1.0" }